--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es_AR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Raul, Xavier, Valentin, Mauro">
-    <meta name="description" content="Ecommerce digital de Productos Tegnologicos">
-    <meta name="keywords" content="Ventas, Ecommerce, Digital, Compra, Venta, Tegnologia">
+    <meta name="author" content="Raul, Xavier, Valentin, Mauro" />
+    <meta
+      name="description"
+      content="Ecommerce digital de Productos Tegnologicos"
+    />
+    <meta
+      name="keywords"
+      content="Ventas, Ecommerce, Digital, Compra, Venta, Tegnologia"
+    />
     <title>Vite + React</title>
   </head>
   <body>
