se hacen cambios

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Raul, Xavier, Valentin, Mauro" />
-    <meta
-      name="description"
-      content="Ecommerce digital de Productos Tegnologicos"
+    <meta name="description" content="Ecommerce digital de Productos Tegnologicos"
     />
     <meta
       name="keywords"
